# monad

./: .gitignore  Cargo.toml  monad.toml
crates/monad-cli/: Cargo.toml
crates/monad-cli/src/: cli.rs  main.rs
crates/monad-cli/tests/: cli_smoke.rs
crates/monad-core/: Cargo.toml
crates/monad-core/src/: adapters.rs  ai_context.rs  checks.rs  commands.rs  diagnostics.rs  error.rs  exec.rs  file_ops.rs  graph.rs  lib.rs  manifest.rs  output.rs  policy.rs  prelude.rs  provenance.rs  release.rs  result.rs  state.rs  templates.rs  toolchains.rs  util.rs  workspace.rs
docs/adr/: ADR-0001-use-rust-for-monad-runtime.md  ADR-0002-coordinate-native-tools-rather-than-replace-them.md  ADR-0003-use-a-multi-crate-rust-workspace.md  ADR-0004-use-latest-stable-rust-as-msrv-policy.md  ADR-0005-introduce-tokio-immediately.md  ADR-0006-use-monad-toml-as-canonical-manifest.md  ADR-0007-maintain-a-monad-lock-or-state-file.md  ADR-0008-support-multiple-graph-output-formats.md  ADR-0009-use-clap-for-cli-command-parsing.md  README.md
docs/backlog/: ORDERED-BACKLOG.md
docs/notes/: comprehensive-root-level-monorepo-file-type-taxonomy.md.md  monorepo-directory-taxonomy.md  monorepo-functionalities.md
docs/project/00-intake/: MONAD-PROJECT-INTAKE.md
docs/project/01-charter/: PRODUCT-CHARTER.md
docs/roadmap/: IMPLEMENTATION-EPICS-AND-SLICES.md  ROADMAP.md
docs/work-packets/: README.md
docs/work-packets/active/: WP-E1-S10-cli-command-smoke-tests.md
docs/work-packets/templates/: WORK-PACKET-TEMPLATE.md
