[package]
name = "monad-cli"
version.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "monad"
path = "src/main.rs"

[dependencies]
clap.workspace = true
monad-core.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[lints]
workspace = true